--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Evaluación de Cursado</title>
 </head>
 <body>
-    <script src="./main.js"></script>
+    <h1>Evaluación de Cursado</h1>
+    <label for="nombreAlumno">Ingrese el nombre del alumno:</label>
+    <input type="text" id="nombreAlumno">
+    <button id="evaluarButton">Evaluar Cursado</button>
+
+    <div id="resultadoContainer"></div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
